--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,43 @@
+html,
+body,
+#root {
+    height: 100%;
+    width: 100%;
+}
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+.App {
+    display: flex;
+    flex-flow: column;
+}
+.TopBar {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    width: 100%;
+    height: 62px;
+    padding: 0 24px;
+}
+.TopBar a {
+    margin-right: 18px;
+    text-decoration: none;
+}
+.animated-page-wrapper {
+	background: #f3f3f3;
+    position: absolute;
+    top: 0;
+    left: 0;
+	bottom: 0;
+	right: 0;
+	margin: auto;
+}
+.page {
+    padding: 0 24px;
+}
+
+.overlay {
+	padding: 20px;
 }
